--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Roboto', sans-serif;
-      background: url('https://i.imgur.com/OznBAUe.jpeg') no-repeat center center fixed;
+      background: url('https://uploadkon.ir/uploads/30bc18_253f0eae2b92ca589534c39a0b4b4104d2.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
       text-align: center;
