--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
     </div>
 
     <div class="telegram-links">
-      <a href="https://t.me/YOUR_TELEGRAM_ID" target="_blank">تلگرام - کلیک کن</a>
-      <a href="https://t.me/YOUR_BOT_ID" target="_blank">ربات - کلیک کن</a>
+      <a href="http://t.me/ejmok" target="_blank">Click Here - Telegram</a>
+      <a href="http://t.me/Berlin_opBot" target="_blank">Click Here - Bot</a>
     </div>
 
     <div class="audio-player">
